# roka

./: .gitignore  CMakeLists.txt  README.md
include/roka/: roka.hpp
src_test/: CMakeLists.txt  test_roka.cpp
